# HRMS

./: .env.example  .gitattributes  .gitignore  Dockerfile  apps.json  docker-compose.co-host.yml  docker-compose.prod.yml  docker-compose.yml
apps/infinity_hrms/: MANIFEST.in  README.md  license.txt  pyproject.toml
apps/infinity_hrms/infinity_hrms/: boot.py  hooks.py  install.py  modules.txt  patches.txt
apps/infinity_hrms/infinity_hrms/infinity_hrms/: __init__.py
apps/infinity_hrms/infinity_hrms/public/css/: infinity_hrms.css
apps/infinity_hrms/infinity_hrms/public/js/: infinity_hrms.js
apps/infinity_hrms/infinity_hrms/seed/: __init__.py  attendance.py  company.py  departments.py  employees.py  erp_crm.py  erp_masters.py  erp_transactions.py  hierarchy.py  holidays.py  leave.py  leave_policy.py  payroll_india.py  payroll_run.py  recruitment.py  users.py  workflow.py
deploy/: Caddyfile  redeploy.sh  setup.sh
