[project]
name = "infinity_hrms"
authors = [
    { name = "Infinity Nexatech", email = "support@infinitynexatech.com" }
]
description = "White-label HRMS by Infinity Nexatech, built on Frappe HR"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "infinity_hrms"
